# usbkvm

./: .gitignore  .gitmodules  README.md  flake-app-meson.patch  flake.nix
.github/workflows/: all.yml  win32.yml
app/: .gitignore  70-usbkvm.rules  80-usbkvm.rules  README.md  i2c_req_enum_app.hpp  make_bindist.sh  make_rc.py  make_tarball.sh  make_version.py  meson.build  meson_options.txt  net.carrotIndustries.usbkvm.desktop  net.carrotIndustries.usbkvm.metainfo.xml  net.carrotindustries.usbkvm.desktop  net.carrotindustries.usbkvm.metainfo.xml
app/src/: about_dialog.cpp  about_dialog.hpp  device_info.hpp  devices_window.cpp  devices_window.hpp  devices_window.ui  get_keymap.cpp  get_keymap.hpp  i2c_util.cpp  i2c_util.hpp  idevices_provider.hpp  ii2c.hpp  imcu_provider.hpp  main_window.cpp  main_window.hpp  model.hpp  mshal.cpp  mshal.hpp  type_window.cpp  type_window.hpp  type_window.ui  update_status.hpp  usbkvm.cpp  usbkvm.css  usbkvm.gresource.xml  usbkvm.rc  usbkvm_application.cpp  usbkvm_application.hpp  usbkvm_device.cpp  usbkvm_device.hpp  usbkvm_mcu.cpp  usbkvm_mcu.hpp  usbkvm_py.cpp  util.cpp  util.hpp  version.cpp  version.hpp  window.ui
fw/boot/: .gitignore  Makefile  STM32F042K6Ux_FLASH.ld  boot-test.py  usbkvm-boot.ioc
fw/boot/Core/Inc/: dfu.h  i2c_msg_boot.h  main.h  stm32f0xx_hal_conf.h  stm32f0xx_it.h
fw/boot/Core/Src/: dfu.c  main.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c
fw/boot/Drivers/STM32F0xx_HAL_Driver/Inc/: stm32_assert_template.h  stm32f0xx_hal_can.h  stm32f0xx_hal_cec.h  stm32f0xx_hal_comp.h  stm32f0xx_hal_conf_template.h  stm32f0xx_hal_dac.h  stm32f0xx_hal_dac_ex.h  stm32f0xx_hal_i2s.h  stm32f0xx_hal_irda.h  stm32f0xx_hal_irda_ex.h  stm32f0xx_hal_pcd_ex.h  stm32f0xx_hal_rtc.h  stm32f0xx_hal_rtc_ex.h  stm32f0xx_hal_smartcard.h  stm32f0xx_hal_smartcard_ex.h  stm32f0xx_hal_spi.h  stm32f0xx_hal_tsc.h  stm32f0xx_hal_usart.h  stm32f0xx_hal_usart_ex.h  stm32f0xx_ll_comp.h  stm32f0xx_ll_dac.h  stm32f0xx_ll_rtc.h  stm32f0xx_ll_spi.h  stm32f0xx_ll_usb.h  stm32f0xx_ll_wwdg.h
fw/boot/Drivers/STM32F0xx_HAL_Driver/Src/: stm32f0xx_hal_can.c  stm32f0xx_hal_cec.c  stm32f0xx_hal_dac.c  stm32f0xx_hal_dac_ex.c  stm32f0xx_hal_msp_template.c  stm32f0xx_hal_pcd.c  stm32f0xx_hal_pcd_ex.c  stm32f0xx_hal_rtc.c  stm32f0xx_hal_rtc_ex.c  stm32f0xx_hal_smartcard.c  stm32f0xx_hal_smartcard_ex.c  stm32f0xx_hal_spi.c  stm32f0xx_hal_timebase_rtc_alarm_template.c  stm32f0xx_hal_timebase_rtc_wakeup_template.c  stm32f0xx_hal_tsc.c  stm32f0xx_hal_usart_ex.c  stm32f0xx_hal_wwdg.c  stm32f0xx_ll_adc.c  stm32f0xx_ll_comp.c  stm32f0xx_ll_crs.c  stm32f0xx_ll_pwr.c  stm32f0xx_ll_rtc.c  stm32f0xx_ll_spi.c  stm32f0xx_ll_usb.c  stm32f0xx_ll_utils.c
fw/common/: compile_commands.json
fw/common/.cache/clangd/index/: i2c_msg.h.F09BB3DB4AD0F291.idx
fw/common/Inc/: flash_header.h  i2c_comm.h  i2c_msg.h  i2c_msg_common.h  i2c_req_enum_fw.h  usbkvm_common.h
fw/common/Src/: i2c_comm.c  usbkvm_common.c
fw/usbkvm/: Makefile  STM32F042K6Ux_FLASH.ld  usbkvm.ioc  write_header.py
fw/usbkvm/Core/Inc/: boot.h  i2c_msg.h  i2c_msg_app.h  main.h  stm32f0xx_hal_conf.h  tusb_config.h  usb_descriptors.h
fw/usbkvm/Core/Src/: boot.c  main.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c  usb_descriptors.c
fw/usbkvm/Drivers/STM32F0xx_HAL_Driver/Inc/: stm32f0xx_hal_pcd.h  stm32f0xx_hal_spi_ex.h  stm32f0xx_hal_wwdg.h  stm32f0xx_ll_iwdg.h
fw/usbkvm/Drivers/STM32F0xx_HAL_Driver/Src/: stm32f0xx_hal_comp.c  stm32f0xx_hal_i2s.c  stm32f0xx_hal_irda.c  stm32f0xx_hal_spi_ex.c  stm32f0xx_hal_timebase_tim_template.c  stm32f0xx_hal_usart.c  stm32f0xx_ll_crc.c  stm32f0xx_ll_dac.c  stm32f0xx_ll_i2c.c  stm32f0xx_ll_tim.c
hw/usbkvm/: board.json  planes.json  top_block.json  top_schematic.json  usbkvm.hprj
hw/usbkvm-pro/: blocks.json  board.json  planes.json  top_block.json  top_schematic.json
hw/usbkvm-pro-panel/: blocks.json  board.json  planes.json  top_block.json  top_schematic.json  usbkvm-pro-panel.hprj
hw/usbkvm-pro-panel/output/gerber/: usbkvm-pro-panel.g2l  usbkvm-pro-panel.g3l  usbkvm-pro-panel.gbl  usbkvm-pro-panel.gbo  usbkvm-pro-panel.gbs  usbkvm-pro-panel.gko  usbkvm-pro-panel.gtl  usbkvm-pro-panel.gto  usbkvm-pro-panel.gtp  usbkvm-pro-panel.gts  usbkvm-pro-panel.txt
hw/usbkvm-pro-panel/pool/: pool.json
hw/usbkvm-pro/output/gerber/: usbkvm-pro.g2l  usbkvm-pro.g3l  usbkvm-pro.gbl  usbkvm-pro.gbo  usbkvm-pro.gbs  usbkvm-pro.gko  usbkvm-pro.gtl  usbkvm-pro.gto  usbkvm-pro.gtp  usbkvm-pro.gts  usbkvm-pro.txt
hw/usbkvm-pro/pool/: pool.json
hw/usbkvm-pro/pool/entities/cache/: 0af44e91-39de-4860-8703-a899d85a3f8c.json  19a945e7-7eff-480b-bd56-85b8a821ab51.json  4185ad20-9f25-405a-b48d-378d9b646085.json  67d0f32a-8647-49a8-bf6c-717550cd8bd7.json  ac656848-2504-4c1e-9cee-c2d3a3320cca.json  b2d50f75-2175-45a0-a43e-f464238a9fb7.json  c42e0607-c950-4014-9cee-4d5f98b66980.json  c92588a0-86ac-4b1c-aa07-b591777d2617.json  e738fcf2-bf36-46b2-8288-82f43aabca8a.json  e827daaf-a6e6-4487-98eb-87229f327e34.json
hw/usbkvm-pro/pool/padstacks/cache/: f319994c-f37b-4fc5-bff8-b8295416c649.json
hw/usbkvm-pro/pool/parts/cache/: 086350b7-af99-43ee-8bc0-d5260f565287.json  093cfc31-5e15-4c85-adaf-620154945a2a.json  0bd908ef-62e1-4b93-b6d5-2c14aa4491e1.json  215c0b91-dd75-4ccf-9e4d-8b70d8f4ebae.json  24eec3f0-adb0-4702-8ac9-13321082c45e.json  2ab89a61-3fb8-442a-b49d-30b8d28da391.json  2c62ab54-142f-41b9-a08f-9a7bafb3a4c3.json  2f50150e-b407-4eda-899c-4a8339af9433.json  3c4eeb64-3675-451c-a659-3f592c36738e.json  5020aee6-e50a-49e8-ac1e-0b56dab42d2a.json  6e276559-ece3-48fa-beda-7810b3b8af73.json  7cebc95c-3fb3-4442-b6e2-e2403732db00.json  88da7cbc-f171-4395-b9d9-c9d6924e8d9b.json  89e435dc-2337-44bc-b8e3-46d73eb91880.json  (+14 more)
hw/usbkvm/output/gerber/: usbkvm.g2l  usbkvm.g3l  usbkvm.gbl  usbkvm.gbo  usbkvm.gbp  usbkvm.gbs  usbkvm.gko  usbkvm.gtl  usbkvm.gto  usbkvm.gtp  usbkvm.gts  usbkvm.txt
hw/usbkvm/pool/: pool.json
mech/: 90592A075_Steel Hex Nut.step  case-pro.d3ddoc  case.d3ddoc  case.d3dwrk
media/: usbkvm.drawio
progdata/: .gitignore  Makefile  convert-edid.py  mptool.py  usbkvm_test.py
(+138 files in other folders)
